Implemented new version of the task with name "Maze"